# rust-monitor-tray

./: AGENTS.md  Cargo.toml  Makefile  README.md  RELEASE.md  about-gpu-2026-04-23T13-11-00-509Z.txt  build-autostart.sh  build.sh  install-kde.sh  install.sh  publish-wiki.sh  uninstall-kde.sh
.agents/skills/perf/: SKILL.md
.agents/skills/release/: SKILL.md
.github/workflows/: release.yml
.pi/audit/: 2026-04-21-qa-repositorio-completo.md  2026-04-21-quality-repositorio-completo.md
.pi/plans/: backend-history-all-tabs.md  melhoria-ui-tabs-referencias-plasmoid.md  migracao-kde-plasmoid.md  ui-kde-plasmoid.md
docs/: architecture.md  backend.md  components.md  frontend.md  index.md  models.md
docs/adr/: 0001-backend-rust-dbus.md  0002-gpu-sysfs-nvidia-smi.md  0003-systemd-user-service.md
plasma/: metadata.json
plasma/contents/config/: config.qml
plasma/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  Popup.qml  README-PANEL.txt  Theme.qml  main.qml
referencias/: cpu.md  disk.md  network.md  ram.md  sensors.md
releases/: monitor-tray  monitor-tray-autostart-deb.deb  monitor-tray-deb.deb  monitor-tray_0.1.0_amd64.deb
releases/monitor-tray-autostart-deb/DEBIAN/: control  prerm
releases/monitor-tray-deb/DEBIAN/: control  postinst  prerm
src/: dbus.rs  lib.rs  main.rs  monitor.rs  speedtest.rs
src/monitor/: collector.rs  gpu.rs  hwmon.rs  mod.rs  models.rs
src/releases/: monitor-tray  monitor-tray-deb.deb
wiki/: Architecture.md  Development.md  Home.md  Installation.md  Roadmap.md  Troubleshooting.md
(+24 files in other folders)
