[package]
name = "monitor-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
libappindicator = "0.9"
sysinfo = "0.37.2"
gtk = "0.18"
glib = "0.21.4"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
time = "0.3.44"
